istio-service-discovery/k8s/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
      annotations:
        sidecar.istio.io/inject: "true"  # Enable sidecar injection for this pod only
    spec:
      containers:
      - name: service-a
        image: gcr.io/istio-demo-project-440716/service-a:latest
        ports:
        - containerPort: 8080
