istio-service-discovery/k8s/kiali-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            host: kiali
            port:
              number: 20001
