istio-service-discovery/k8s/prometheus-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: "/graph"
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
