istio-service-discovery/k8s/service-a-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a-virtualservice
  namespace: demo
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
    - match:
        - uri:
            prefix: "/service-a"
      route:
        - destination:
            host: service-a.demo.svc.cluster.local
            port:
              number: 8080
